--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h2>예측결과 : {{data}}</h2>
+        <h2>{{data}}</h2>
         <p>010</p>
     </body>
 </html>
