--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h2>{{data}}</h2>
-        <p>010</p>
+        <img src="/Users/chance/Desktop/missing/missing-flask/static/임혜영2.jpeg" width="216" height="288"/>
+        <h2>이 사람은 {{data}} 입니다.</h2>
+        <h2>비상연락망 : 01000000000</h2>
     </body>
 </html>
