--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <img src="{{ url_for('static', filename='임혜영2.jpeg') }}" width="216" height="288"/>
-        <h2>이 사람은 {{data}} 입니다.</h2>
-        <h2>비상연락망 : 01000000000</h2>
+        <img src="{{ url_for('static', filename='임혜영2.jpeg') }}" width="540" height="720"/>
+        <h1>이 사람은 {{data}}씨 입니다.</h1>
+        <h1>보호자 전화번호 : 07000000000</h1>
     </body>
 </html>
