--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <body>
         <img src="{{ url_for('static', filename='임혜영2.jpeg') }}" width="540" height="720"/>
         <h1>이 사람은 {{data}}씨 입니다.</h1>
-        <h1>보호자 전화번호 : 07000000000</h1>
+        <h1>{{data}}씨는 치매환자 입니다.</h1>
+        <h1>보호자 연락처 : 07000000000</h1>
     </body>
 </html>
